--- a/src/components/featured-maps-list/featured-maps-list-styles.module.scss
+++ b/src/components/featured-maps-list/featured-maps-list-styles.module.scss
@@ -12,6 +12,7 @@ $scrollbar-gutter: 15px;
   border-radius: 2px;
   width: 100%;
   @include bottom();
+  position: fixed;
 
   @media #{$tablet-portrait} {
     @include topLeft();
