--- a/src/components/featured-taxa-selector/featured-taxa-styles.module.scss
+++ b/src/components/featured-taxa-selector/featured-taxa-styles.module.scss
@@ -5,8 +5,10 @@
 .wrapper {
   overflow: hidden;
   @include bottom();
+  position: fixed;
 
   @media #{$tablet-portrait} {
+    position: absolute;
     width: unset;
     bottom: 20px;
     left: calc(50% - 250px);
